@@ -31,7 +31,6 @@
  */
 
 #include "opj_includes.h"
-#include <math.h>
 
 static int t1_init_ctxno_zc(int f, int orient) {
 	int h, v, d, n, t, hv;
